--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/alert": "^2.2.13",
     "@heroui/button": "^2.2.13",
+    "@heroui/card": "^2.2.13",
+    "@heroui/divider": "^2.2.9",
+    "@heroui/input": "^2.4.13",
+    "@heroui/link": "^2.2.11",
     "@heroui/react": "^2.7.2",
     "@heroui/system": "^2.4.10",
     "@heroui/theme": "^2.4.9",
+    "@radix-ui/react-icons": "^1.3.2",
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tanstack/react-query": "^5.66.9",
     "framer-motion": "^12.4.7",
