--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@berachain-foundation/berancer-sdk": "^1.1.0",
     "@heroui/alert": "^2.2.13",
     "@heroui/button": "^2.2.13",
     "@heroui/card": "^2.2.13",
@@ -16,20 +17,25 @@
     "@heroui/input": "^2.4.13",
     "@heroui/link": "^2.2.11",
     "@heroui/react": "^2.7.2",
+    "@heroui/spinner": "^2.2.12",
     "@heroui/system": "^2.4.10",
     "@heroui/theme": "^2.4.9",
     "@radix-ui/react-icons": "^1.3.2",
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tanstack/react-query": "^5.66.9",
+    "ethers": "^6.13.5",
     "framer-motion": "^12.4.7",
+    "lodash": "^4.17.21",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "viem": "2.x",
-    "wagmi": "^2.14.12"
+    "wagmi": "^2.14.12",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
