--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
     "viem": "2.x",
     "wagmi": "^2.14.12",
     "zustand": "^5.0.3"
