--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tanstack/react-query": "^5.66.9",
+    "@tremor/react": "^3.18.7",
     "ethers": "^6.13.5",
     "framer-motion": "^12.4.7",
     "lodash": "^4.17.21",
@@ -30,6 +31,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
     "viem": "2.x",
     "wagmi": "^2.14.12",
     "zustand": "^5.0.3"
