--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tanstack/react-query": "^5.66.9",
     "@tremor/react": "^3.18.7",
+    "@types/numeral": "^2.0.5",
     "ethers": "^6.13.5",
     "framer-motion": "^12.4.7",
     "lodash": "^4.17.21",
     "next": "15.1.7",
+    "numeral": "^2.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
