--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
-    "viem": "2.x",
+    "viem": "~2.23.11",
     "wagmi": "^2.14.12",
     "zustand": "^5.0.3"
   },
