--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "15.1.7",
     "numeral": "^2.0.6",
     "react": "^19.0.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
