--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroui/link": "^2.2.11",
     "@heroui/react": "^2.7.2",
     "@heroui/spinner": "^2.2.12",
+    "@heroui/switch": "^2.2.14",
     "@heroui/system": "^2.4.10",
     "@heroui/theme": "^2.4.9",
     "@radix-ui/react-icons": "^1.3.2",
